--- a/home/dot-config/neofetch/config.conf
+++ b/home/dot-config/neofetch/config.conf
@@ -16,7 +16,7 @@ print_info() {
   echo
   info "${cl7} ╭─" term
   info "${cl7} ├─" shell
-  info "${cl7} ├─" wm 
+  info "${cl7} ├─" wm
   info "${cl7} ╰─" term_font
   echo
   info "${cl1} ╭─󰍛" cpu
@@ -767,7 +767,7 @@ ascii_distro="ubuntu-small"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(distro)
+ascii_colors=(1 2 3 4 5 6)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
